tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter/execute__tests__noirc_frontend_tests_check_trait_wrong_parameter_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Parameter #1 of method `default` must be of type Field, not u32
   ┌─ src/main.nr:11:23
   │
11 │         fn default(x: u32) -> Self {
   │                       ---
   │

Aborting due to 1 previous error
