tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Parameter #1 of method `default` must be of type Field, not u32
   ┌─ src/main.nr:11:23
   │
11 │         fn default(x: u32) -> Self {
   │                       ---
   │

Aborting due to 1 previous error
